--- a/imageplayer/app/assets/stylesheets/store.css.scss
+++ b/imageplayer/app/assets/stylesheets/store.css.scss
@@ -1,3 +1,80 @@
 // Place all the styles related to the Store controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.store {
+  h1{
+    margin: 0;
+    padding-bottom: 0.5em;
+    font: 150% sans-serif;
+    color: #226;
+    border-bottom: 3px dotted #77d;
+  }
+  /* An entry in the store catalog */
+ .entry{
+   overflow: auto;
+   margin-top: 1em;
+   border-bottom: 1px dotted #77d;
+   min-height: 100px;
+   img {
+     width: 80px;
+     margin-right: 5px;
+     margin-bottom: 5px;
+     position: absolute;
+   }
+   
+   p{
+     margin-left: 100px;
+     margin-top: 0.5em;
+     margin-bottom: 0.8em;
+     
+     form,div {
+       display: inline;
+     }
+   }
+   
+ }   
+}
+.nav_up{
+  padding:7px;
+  background-color:white;
+  border:1px solid #CCC;
+  position:fixed;
+  background:transparent url(arrow_up.png) no-repeat top left;
+  background-position:50% 50%;
+  width:20px;
+  height:20px;
+  bottom:10px;
+  opacity:0.7;
+  left:30px;
+  white-space:nowrap;
+  cursor: pointer;
+  -moz-border-radius: 3px 3px 3px 3px;
+    -webkit-border-top-left-radius:3px;
+  -webkit-border-top-right-radius:3px;
+    -khtml-border-top-left-radius:3px;
+  -khtml-border-top-right-radius:3px;
+  filter:progid:DXImageTransform.Microsoft.Alpha(opacity=70);
+}
+.nav_down{
+  padding:7px;
+  background-color:white;
+  border:1px solid #CCC;
+  position:fixed;
+  background:transparent url(arrow_down.png) no-repeat top left;
+  background-position:50% 50%;
+  width:20px;
+  height:20px;
+  bottom:10px;
+  opacity:0.7;
+  left:70px;
+  white-space:nowrap;
+  cursor: pointer;
+  -moz-border-radius: 3px 3px 3px 3px;
+    -webkit-border-top-left-radius:3px;
+  -webkit-border-top-right-radius:3px;
+    -khtml-border-top-left-radius:3px;
+  -khtml-border-top-right-radius:3px;
+  filter:progid:DXImageTransform.Microsoft.Alpha(opacity=70);
+}
+
+
