--- a/imageplayer/app/views/layouts/application.html.erb
+++ b/imageplayer/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
   </head>
   <body>
 
-    <div class="navbar navbar-default navbar-static-top">
+    <div class="navbar navbar-fixed-top navbar-inverse ">
       <div class="container">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
           <span class="icon-bar"></span>
@@ -46,13 +46,9 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="#">Imageplayer</a>
-        <div class="navbar-collapse collapse navbar-responsive-collapse">
-          <ul class="nav navbar-nav">
-            <li><%= link_to "Link1", "/path1"  %></li>
-            <li><%= link_to "Link2", "/path2"  %></li>
-            <li><%= link_to "Link3", "/path3"  %></li>
-          </ul>
-        </div>
+        <ul class="nav pull-right">
+			<a href="#" onclick="window.location.reload()" data-icon="back" data-iconpos="notext">Refresh</a>
+		</ul>       
       </div>
     </div>
 
@@ -62,17 +58,7 @@
           <%= bootstrap_flash %>
           <%= yield %>
         </div>
-        <div class="col-lg-3">
-          <div class="well sidebar-nav">
-            <h3>Sidebar</h3>
-            <ul class="nav nav-list">
-              <li class="nav-header">Sidebar</li>
-              <li><%= link_to "Link1", "/path1"  %></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
-            </ul>
-          </div><!--/.well -->
-        </div><!--/span-->
+        
       </div><!--/row-->
 
       <footer>
