--- a/imageplayer/app/views/layouts/application.html.erb
+++ b/imageplayer/app/views/layouts/application.html.erb
@@ -47,7 +47,7 @@
         </button>
         <a class="navbar-brand" href="#">Imageplayer</a>
         <ul class="nav pull-right">
-			<a href="#" onclick="window.location.reload()" data-icon="back" data-iconpos="notext">Refresh</a>
+			<a href="#" onclick="window.location.reload()" data-icon="back" data-iconpos="notext" style="color: #E8EDF2 ">Refresh</a>
 		</ul>       
       </div>
     </div>
