--- a/imageplayer/app/views/store/index.html.erb
+++ b/imageplayer/app/views/store/index.html.erb
@@ -22,6 +22,7 @@
         
 		<script src="jquery-1.3.2.js" type="text/javascript"></script>
 		<script src="scroll-startstop.events.jquery.js" type="text/javascript"></script>
+		<!-- script for scrolling page up down -->
 		<script>
 			$(function() {
 				var $elem = $('#content');
@@ -48,6 +49,7 @@
 				);
             });
         </script>
+        <!-- Script for swipe and delete -->
         <script>
 	        var onswipe = false;
 			//$( '#swipedelete li' ).live( 'swiperight',function(){ 
