--- a/imageplayer/app/views/layouts/application.html.erb
+++ b/imageplayer/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
     <title><%= content_for?(:title) ? yield(:title) : "Imageplayer" %></title>
     <%= csrf_meta_tags %>
 
