--- a/imageplayer/app/views/store/index.html.erb
+++ b/imageplayer/app/views/store/index.html.erb
@@ -1,93 +1,66 @@
 <% if notice %>
-	<p id="notice"><%= notice %></p>
+<p id="notice">
+	<%= notice %>
+</p>
 <% end %>
 <h1>Your image list</h1>
 <div id="content" class="content">
-	<div data-role="page"> 
-    <div data-role="content">
-            <ul data-role="listview" data-inset="true" id="swipedelete">
-               <% @response["items"].each{ |image| %>
+	<div data-role="page">
+		<div data-role="content">
+			<ul data-role="listview" data-inset="true" id="swipedelete">
+				<% @response["items"].each{ |image| %>
 				<div class="entry" >
-				    <li><a><%=image_tag image["url"]%>
-				    <%= sanitize(image["title"]).first(80)%></a></li>
+					<ul>
+						<a class="clearitem"><%= image_tag image["url"]%>
+						<%= sanitize(image["title"]).first(80)%></a>
+					</ul>
 				</div>
 				<%}%>
-            </ul>
-    </div> 
-</div> 
+			</ul>
+		</div>
+	</div>
 
 </div>
 <div style="display:none;" class="nav_up" id="nav_up"></div>
 <div style="display:none;" class="nav_down" id="nav_down"></div>
-        
-		<script src="jquery-1.3.2.js" type="text/javascript"></script>
-		<script src="scroll-startstop.events.jquery.js" type="text/javascript"></script>
-		<!-- script for scrolling page up down -->
-		<script>
-			$(function() {
-				var $elem = $('#content');
-				
-				$('#nav_up').fadeIn('slow');
-				$('#nav_down').fadeIn('slow');  
-				
-				$(window).bind('scrollstart', function(){
-					$('#nav_up,#nav_down').stop().animate({'opacity':'0.2'});
-				});
-				$(window).bind('scrollstop', function(){
-					$('#nav_up,#nav_down').stop().animate({'opacity':'1'});
-				});
-				
-				$('#nav_down').click(
-					function (e) {
-						$('html, body').animate({scrollTop: $elem.height()}, 800);
-					}
-				);
-				$('#nav_up').click(
-					function (e) {
-						$('html, body').animate({scrollTop: '0px'}, 800);
-					}
-				);
-            });
-        </script>
-        <!-- Script for swipe and delete -->
-        <script>
-	        var onswipe = false;
-			//$( '#swipedelete li' ).live( 'swiperight',function(){ 
-			// changed to click to test on desktop browser
-			$( '#swipedelete li' ).live( 'click',function(){ 
-			// change click to swiperight to test swipe
-			    if(!onswipe){
-			        onswipe = true;
-			        
-			        var li;    
-			        var html = '<li class="delete-controls"><button type="button" class="btncancel ui-btn-corner-all ui-btn-up-c" data-role="button" data-theme="c">Cancel</button>&nbsp;<button type="button" class="btndelete ui-btn-corner-all ui-btn-up-e" data-role="button" data-theme="e">Delete</button></li>';
-			        $(this).after(html);
-			        li = $(this).detach();    
-			        $("ul[id='swipedelete']").listview("refresh");
-			        
-			        $(".delete-controls").unbind("tap click");
-			        $(".delete-controls .btndelete").click(function(e){
-			            //alert("Click on delete");
-			            if(!confirm("Are you sure you want to delete this item?")){        
-			                $(".delete-controls").before(li);
-			                $(".delete-controls").remove();
-			            } else{
-			                $(".delete-controls").remove();
-			            }
-			            
-			            onswipe = false;
-			            $("ul[id='swipedelete']").listview("refresh");
-			        });
-			        
-			        $(".delete-controls .btncancel").click(function(e){
-			            //alert("Click on cancel");
-			            $(".delete-controls").before(li);
-			            $(".delete-controls").remove();
-			            
-			            onswipe = false;
-			            $("ul[id='swipedelete']").listview("refresh");
-			        });        
-			        
-			    }
+<script src="scroll-startstop.events.jquery.js" type="text/javascript"></script>
+<!-- script for scrolling page up down -->
+<script>
+	$(function() {
+		var $elem = $('#content');
+
+		$('#nav_up').fadeIn('slow');
+		$('#nav_down').fadeIn('slow');
+
+		$(window).bind('scrollstart', function() {
+			$('#nav_up,#nav_down').stop().animate({
+				'opacity' : '0.2'
 			});
-        </script>
+		});
+		$(window).bind('scrollstop', function() {
+			$('#nav_up,#nav_down').stop().animate({
+				'opacity' : '1'
+			});
+		});
+
+		$('#nav_down').click(function(e) {
+			$('html, body').animate({
+				scrollTop : $elem.height()
+			}, 800);
+		});
+		$('#nav_up').click(function(e) {
+			$('html, body').animate({
+				scrollTop : '0px'
+			}, 800);
+		});
+	}); 
+</script>
+<!-- Script for swipe and delete -->
+<script>
+	$('#swipedelete a.clearitem').live('click', function() {
+		 if(confirm("Are you sure you want to delete this item?")){        
+		$(this).parent().remove();
+		}
+	});
+
+</script>
